--- a/src/assets/styles/01_base/04_darkMode.scss
+++ b/src/assets/styles/01_base/04_darkMode.scss
@@ -40,7 +40,7 @@ body.dark {
         }
     }
     & .timeline-date {
-        i {
+        .icon {
             color: darkgoldenrod;
         }
     }
