--- a/src/assets/styles/01_base/_01_base.scss
+++ b/src/assets/styles/01_base/_01_base.scss
@@ -1,4 +1,6 @@
 /****** [General] ******/
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@100;200;300;400;500;700&display=swap');
+
 :root {
     --bg-black-900: #151515;
     --bg-black-100: #222222;
@@ -33,9 +35,6 @@ body {
     background: var(--bg-black-900);
 }
 
-
-
-
 body.light {
     --bg-black-900: #f2f2fc;
     --bg-black-100: #fdf9ff;
@@ -44,6 +43,9 @@ body.light {
     --text-black-900: #302e4d;
     --text-black-700: #504e70;
     --text-black-500: #706e93;
+    .icon {
+        color: var(--text-black-900);
+    }
 }
 body.dark {
     --bg-black-900: #151515;
@@ -53,7 +55,11 @@ body.dark {
     --text-black-900: #fff;
     --text-black-700: #e9e9e9e9;
     --text-black-500: #d3d3d3;
+    .icon {
+        color: var(--text-black-900);
+    }
 }
+
 #tablet {
     display: none;
 }
