--- a/src/assets/styles/01_base/_04_responsive.scss
+++ b/src/assets/styles/01_base/_04_responsive.scss
@@ -447,7 +447,7 @@
                     font-size: 16px;
                     padding: 15px;
                 }
-                i {
+                .icon {
                     flex: 1;
                     max-width: 78.75px;
                     margin-right: 15px;
@@ -458,9 +458,9 @@
                 border-bottom: 0px solid var(--bg-black-50);
             }
         }
-        .lang-icon {
-            margin-right: 22px;
-        }
+        // .lang-icon {
+        //     margin-right: 22px;
+        // }
         .switcher-block {
             @include row_R;
             flex-flow: column;
