--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -135,7 +135,7 @@
                     color: var(--skin-color);
                 }
                 a.active-link,
-                i.active-link {
+                .icon.active-link {
                     color: var(--skin-color);
                 }
             }
